--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,24 @@
   <groupId>eu.wdaqua</groupId>
   <artifactId>Pipeline</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+    <dependency>
+  		<groupId>org.apache.jena</groupId>
+  		<artifactId>apache-jena-libs</artifactId>
+  		<type>pom</type>
+  		<version>3.0.0</version>
+    </dependency>
+    <dependency>
+	<groupId>com.nanohttpd</groupId>
+	<artifactId>nanohttpd</artifactId>
+	<version>2.1.0</version>
+    </dependency>
+    <dependency>
+     <groupId>org.eclipse.jetty</groupId>
+     <artifactId>jetty-server</artifactId>
+     <version>9.3.6.v20151106</version>
+    </dependency>  
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
