--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/kulsingh/Documents/workspace/jena-core-3.0.0.jar"/>
+	<classpathentry kind="lib" path="/Users/kulsingh/Documents/workspace/jena-arq-3.0.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/Users/kulsingh/Documents/workspace/httpclient-4.3-beta1.jar"/>
+	<classpathentry kind="lib" path="/Users/kulsingh/Documents/workspace/apache-httpcomponents-httpclient.jar"/>
+	<classpathentry kind="lib" path="/Users/kulsingh/Documents/workspace/apache-httpcomponents-httpcore.jar"/>
+	<classpathentry kind="lib" path="/Users/kulsingh/Documents/workspace/nanohttpd-2.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/kulsingh/Documents/workspace/commons-codec-1.4.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
