--- a/pom.xml
+++ b/pom.xml
@@ -11,25 +11,45 @@
   		<version>3.0.0</version>
     </dependency>
     <dependency>
-	<groupId>junit</groupId>
-	<artifactId>junit-dep</artifactId>
-	<version>4.8.2</version>
-</dependency>
-<dependency>
-  <groupId>org.apache.httpcomponents</groupId>
-  <artifactId>httpclient</artifactId>
-  <version>4.5.1</version>
-</dependency>
-    <dependency>
-	<groupId>com.nanohttpd</groupId>
-	<artifactId>nanohttpd</artifactId>
-	<version>2.1.0</version>
+	    <groupId>junit</groupId>
+	    <artifactId>junit-dep</artifactId>
+	    <version>4.8.2</version>
     </dependency>
     <dependency>
-     <groupId>org.eclipse.jetty</groupId>
-     <artifactId>jetty-server</artifactId>
-     <version>9.3.6.v20151106</version>
-    </dependency>  
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.1</version>
+    </dependency>
+    <dependency>
+	   <groupId>com.nanohttpd</groupId>
+	   <artifactId>nanohttpd</artifactId>
+	   <version>2.1.0</version>
+    </dependency>
+    <dependency>
+       <groupId>org.eclipse.jetty</groupId>
+       <artifactId>jetty-server</artifactId>
+       <version>9.3.6.v20151106</version>
+    </dependency>
+    <dependency>
+		<groupId>org.apache.lucene</groupId>
+		<artifactId>lucene-core</artifactId>
+		<version>5.3.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.lucene</groupId>
+		<artifactId>lucene-analyzers-common</artifactId>
+		<version>5.3.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.lucene</groupId>
+		<artifactId>lucene-queryparser</artifactId>
+		<version>5.3.0</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>2.6</version>
+	</dependency>  
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
