--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   		<groupId>org.apache.jena</groupId>
   		<artifactId>apache-jena-libs</artifactId>
   		<type>pom</type>
-  		<version>3.0.0</version>
+  		<version>2.12.1</version>
     </dependency>
     <dependency>
 	    <groupId>junit</groupId>
@@ -49,6 +49,11 @@
 		<groupId>commons-lang</groupId>
 		<artifactId>commons-lang</artifactId>
 		<version>2.6</version>
+	</dependency>
+	<dependency>
+    		<groupId>wdaqua</groupId>
+    		<artifactId>sina</artifactId>
+    		<version>0.0.1</version>
 	</dependency>  
   </dependencies>
   <build>
@@ -92,4 +97,11 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+  	<repository>
+    		<id>in-project</id>
+      		<name>In Project Repo</name>
+      		<url>file://${project.basedir}/libs</url>
+  	</repository>
+  </repositories>
 </project>
